@@ -45,7 +45,12 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
-  background-color: rgba(15, 15, 15, 0.85);
+  background: linear-gradient(
+    180deg,
+    rgba(7, 23, 27, 0.85),
+    rgba(11, 17, 20, 0.85),
+    rgba(8, 10, 12, 0.85)
+  );
   padding: 20px;
   box-sizing: border-box;
   box-shadow: 0 0 30px rgba(0, 255, 255, 0.2), 0 0 60px rgba(0, 255, 255, 0.1);
